# ImageProcessingSoC

./: .gitignore  README.md
Testbenches/: SRAMController_tb.sv  edgeDetectionTestbench.sv  sram.py  syncFifoTestbench.sv  timerTestbench.sv
Testbenches/EdgeDetection/: EdgeDetectionPackage.sv  EdgeDetectionTestbench.sv
firmware/: .gitignore  CMakeLists.txt  main.c
firmware/common/: defs.h  error_defs.h
firmware/drivers/: CMakeLists.txt
firmware/drivers/sram/: sram.h
firmware/drivers/timer/: timer.c  timer.h
rtl/: avalonBusMaster.sv
rtl/cores/edgeDetection/: edgeDetectionTop.sv
rtl/peripherals/pixelBuffer/: pixelBuffer.sv
rtl/peripherals/sram/: SRAMController.sv  SRAM_Controller.sv  avalonSRAM.sv  syncFifo.sv
rtl/peripherals/timer/: avalonTimer.sv  counter.sv  timer.sv
rtl/peripherals/vga/: VGADriver.sv
src/graphics/: defs.cpp  defs.h  gameState.cpp  gameState.h  main.cpp  paddle.cpp  paddle.h
src/graphics/drawables/: ball.cpp  ball.h  drawable.cpp  drawable.h  paddle.cpp  paddle.h  playerScore.cpp  playerScore.h
src/rtl/: BallPhysics.sv  PaddleAlgorithm.sv  PingPong.sv  SRAMController.sv  VGADriver.sv
